--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
+    <ViewFlipper
+        android:id="@+id/vfliper"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
 
     <FrameLayout
         android:id="@+id/fl_wrapper"
